--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,13 +3,13 @@
 html {
   background-color: var(--background-color);
   font-family: var(--font-family);
-  color: var(--tertiary-color);
+  color: var(--font-color);
   height: 100%;
   width: 100%;
   overflow-x: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
-  padding-top: 80px;
+  text-transform: lowercase;
 }
 
 body::-webkit-scrollbar {
@@ -22,10 +22,15 @@ body::-webkit-scrollbar {
 
 .heading {
   width: 95%;
-  text-align: center;
+  text-align: left;
   margin: auto;
-  color: var(--secondary-color);
-  font-size: 2rem;
+  color: var(--font-color);
+  font-size: 1.5rem;
+  margin-bottom: 0px;
+
+  p {
+    margin-bottom: 1rem;
+  }
 }
 
 .heading-white {
@@ -34,7 +39,7 @@ body::-webkit-scrollbar {
 }
 
 .paragraph {
-  color: var(--tertiary-color);
+  color: var(--font-color);
 }
 
 .nav-back {
@@ -267,8 +272,9 @@ body::-webkit-scrollbar {
 
 /* Background Image */
 .image-container {
-  width: 100vw;
-  height: auto;
+  width: 80%;
+  padding-left: 10%;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -280,9 +286,8 @@ body::-webkit-scrollbar {
 }
 
 .text-container {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
+  color: var(--font-color);
+  margin-bottom: 0px;
 }
 
 .home-container {
@@ -319,6 +324,7 @@ body::-webkit-scrollbar {
 .sub-text {
   font-size: 1.2rem;
   text-align: center;
+  margin-top: 0px;
 }
 
 /* Card */
@@ -503,7 +509,7 @@ body::-webkit-scrollbar {
 
 /* Enquire card */
 .enquire-card {
-  margin-top: 2em;
+  margin-top: calc(80px + 2%);
   margin-left: 2em;
   margin-right: 2em;
   height: 100%;
@@ -515,7 +521,6 @@ body::-webkit-scrollbar {
   align-items: center;
   width: 80%;
   margin-left: 10%;
-  margin-top: 4rem;
   background-color: white;
 }
 
@@ -525,7 +530,7 @@ body::-webkit-scrollbar {
 
 .enquire-form {
   width: 100%;
-  background-color: white;
+  background-color: #F0EFEA;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
 }
@@ -575,18 +580,19 @@ h1 {
 .header {
   position: fixed;
   top: 0;
-  width: 100%;
-  background-color: #fff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  width: 80%;
+  background-color: var(--background-color);
   z-index: 1000;
   display: flex;
-  width: 100vw;
   height: 60px;
   transition: transform 0.3s ease-in-out;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2%;
 }
 
 .header--visible {
@@ -597,15 +603,28 @@ h1 {
   transform: translateY(-100%);
 }
 
+.block {
+  display: block;
+}
+
 @media (min-width: 768px) {
   .heading-white {
     color: #FFFFFF;
     font-size: 3rem;
+    text-align: left;
+  }
+
+  p {
+    text-align: left;
   }
 
   .heading {
-    color: var(--secondary-color);
-    font-size: 3rem;
+    color: var(--font-color);
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
+    text-align: left;
+    width: 100%;
   }
 
   .menu-icon {
@@ -615,28 +634,31 @@ h1 {
   .menu-items {
     display: flex;
     justify-content: space-between;
-    padding-right: 2rem;
   }
 
     /* Background Image */
   .image-container {
-    width: 100vw;
-    height: calc(100vh - 60px);
+    width: 80%;
+    padding-left: 10%;
+    height: 100vh;
     display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
   }
 
   .background-image {
-    width: 100vw;
-    height: 100%;
+    width: 50vh;
+    height: 50vh;
     object-fit: cover;
+    border-radius: 50%;
   }
 
   .text-container {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
+    color: var(--font-color);
+    width: 100%;
+    margin-bottom: 0px;
+    padding-left: 2rem;
   }
 
   .home-container {
@@ -720,7 +742,7 @@ h1 {
   }
 
   .tickbox-card-heading {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .tickbox-card-container {
@@ -760,7 +782,7 @@ h1 {
   }
 
   .enquire-card {
-    background-color: #DC5F00;
+    background-color: var(--secondary-color);
     border-radius: 6px;
   }
 
@@ -795,12 +817,13 @@ h1 {
   }
   
   .sub-text {
-    font-size: 2rem;
+    font-size: 0.85rem;
     margin: 0;
     padding: 0;
     width: 100%;
-    text-align: center;
-    margin-top: 2rem;
+    text-align: left;
+    margin-top: 0px;
+    line-height: 1.8;
   }
 
   .nav-back {
@@ -971,11 +994,11 @@ h1 {
   }
 
   .enquire-card-info-heading {
-    font-size: 4rem;
+    font-size: 2rem;
   }
 
   .enquire-steps {
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
 
   .footer-container {
@@ -1033,5 +1056,66 @@ h1 {
 
   .social-icon {
     font-size: 2rem;
+  }
+
+  /* Typewriter.css */
+  .typewriter {
+    display: inline-block;
+  }
+
+  .cursor {
+    display: inline-block;
+    margin-left: 1px;
+    color: var(--font-color);
+    animation: blink 1s step-end infinite;
+  }
+
+  @keyframes blink {
+    50% {
+      opacity: 0;
+    }
+  }
+
+  .container {
+    padding-left: 10%;
+    padding-right: 10%;
+    width: 80%;
+    padding-top: 5%;
+    height: 100vh;
+  }
+
+  .skills-container {
+    width: 100%;
+  }
+
+  .skill {
+    background-color: #F0EFEA;
+    padding: 20px;
+    text-align: center;
+    width: 25%;
+    height: 30vh;
+  }
+  
+  .skill-heading {
+    font-size: 1rem;
+    margin: 10px 0;
+    margin-left: 10px;
+    color: var(--font-color);
+  }
+  
+  .skill-description {
+    font-size: 0.85em;
+    color: var(--tertiary-color)
+  }
+
+  .skills-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .skill-header {
+    display: flex;
+    align-items: center;
   }
 }
