--- a/src/styles/Variables.css
+++ b/src/styles/Variables.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 :root {
     /* Colors */
-    --primary-color: #DC5F00;
-    --secondary-color: #000000;
-    --tertiary-color: #686D76;
-    --background-color: #FFFFFF;
+    --primary-color: #F94C02;
+    --secondary-color: #3E6C6A;
+    --tertiary-color: #70806D;
+    --background-color: #E6E4DF;
+    --font-color: #3E6C6A;
   
     /* Typography */
-    --font-family: 'Roboto', sans-serif;
+    --font-family: 'Roboto-mono', sans-serif;
     --font-size: 16px;
     --heading-font-size: 24px;
   
